<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_above="@+id/tName"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/eName"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="3"
            android:hint="@string/eNameHint"
            android:textColorHint="#78909C"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textStyle="bold|italic"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/bClick"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:onClick="clicked"
            android:text="@string/bClickText"
            android:textColor="#0000ff"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/tName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#eeeeee"
        android:gravity="center_horizontal"
        android:text="@string/tNameDefault"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bActivityA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal|center_vertical"
        android:minHeight="48dp"
        android:onClick="clicked"
        android:text="@string/bActivityAText" />

    <Spinner
        android:id="@+id/colorsSpinner"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="232dp"
        android:layout_toEndOf="@+id/tSelectColor"
        android:layout_toRightOf="@+id/tSelectColor"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/tSelectColor"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:text="@string/tSelectColorText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:onClick="clicked"
            android:text="@string/bSearchText" />

        <Button
            android:id="@+id/bShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:onClick="clicked"
            android:text="@string/bShareText" />
    </LinearLayout>

</RelativeLayout>